@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.6.15"
+#define KPPPVERSION "1.6.16"
 #endif
